# pyproject-version-sync

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
pyproject_version_sync/: sync_pyproject_version.py
